anexo fotos e index e style
foi adicionado as fotos, criado html e css com bootstrap

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div>
-        <header></header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
             <a class="navbar-brand" href="#">Portfólio</a>
@@ -52,8 +51,50 @@
             </div>
         </nav>
 
-        <section class="artigos">
-            <h1>meio</h1>
+        <section>
+            <div>
+                <div>
+                    <h1 class="projetos">Projetos</h1>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="imagens/Em BREVE.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">PROJETO X</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, culpa nulla? Ullam, aliquam reiciendis. Vitae inventore esse, qui magnam aspernatur delectus nihil unde at magni, sunt itaque perferendis suscipit commodi?</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="imagens/Em BREVE.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">PROJETO Y</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, officia nobis? Deserunt ducimus ex iure magnam fugiat similique neque illo, maiores error suscipit laboriosam sunt nihil fugit optio repellendus recusandae?</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="imagens/Em BREVE.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">PROJETO Z</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut adipisci magni minus dolorum quidem temporibus quaerat, nisi facere dignissimos ipsum? Ratione rerum perferendis libero quos tenetur ex aliquid sequi obcaecati!</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer class="rodape">
