--- a/index.html
+++ b/index.html
@@ -26,26 +26,22 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="https://beacons.ai/carvalhotkeys">Beacons</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Sobre</a></li>
+                        <li><a class="dropdown-item" href="#projetos-id">Projetos</a></li>
                         <li>
                         <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Fale Comigo</a></li>
                     </ul>
                     </li>
                 </ul>
-                <form class="d-flex mt-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Search</button>
-                </form>
                 </div>
             </div>
             </div>
@@ -54,7 +50,7 @@
         <section>
             <div>
                 <div>
-                    <h1 class="projetos">Projetos</h1>
+                    <h1 class="projetos" id="projetos-id">Projetos</h1>
                 </div>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
@@ -98,7 +94,24 @@
         </section>
 
         <footer class="rodape">
-            <h1>rodape</h1>
+            <h1>Cristiano de Carvalho Parangaba</h1>
+            <div class="minha-imagem">
+                <div class="sobremim">
+                    <h3>Sobre mim</h3>
+                    <p>
+                        Sou um profissional com experiência em vendas e prospecção, liderança de equipe, gerenciamento de contas e atendimento ao cliente. 
+                    </p>
+                    <p>
+                        Possuo habilidades em React, Bootstrap, JavaScript, Git, GitHUb, NodeJS e MySQL, além de conhecimentos em Python e Power BI para automação, Web Scraping, análise de dados, tratamento de dados, gráficos em Python e tabelas (DataFrames).
+                    </p>
+                    <p>
+                        Busco constantemente aperfeiçoamento e atualização em novas tecnologias. Comunicativo, proativo e flexível para mudanças e resolução de problemas, sou capaz de liderar equipes e desenvolver relacionamentos duradouros com clientes e fornecedores.
+                    </p>
+                </div>
+                <div>
+                    <img src="imagens/fundopreto.png" width="400px" alt="">
+                </div>
+            </div>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
