--- a/index.html
+++ b/index.html
@@ -91,27 +91,63 @@
                     </div>
                 </div>
             </div>
+
+            <article>
+                <h1 class="meunome">Cristiano Carvalho</h1>
+                <div class="containersobreEimage">
+                    <div class="container">
+                        <h3>Sobre mim</h3>
+                        <p>
+                            Sou um profissional com experiência em vendas e prospecção, liderança de equipe, gerenciamento de contas e atendimento ao cliente. 
+                        </p>
+                        <p>
+                            Possuo habilidades em HTML5, CSS3, React, Bootstrap, JavaScript, Git, GitHUb, NodeJS e MySQL, além de conhecimentos em Python e Power BI para automação, Web Scraping, análise de dados, tratamento de dados, gráficos em Python e tabelas (DataFrames).
+                        </p>
+                        <p>
+                            Busco constantemente aperfeiçoamento e atualização em novas tecnologias. Comunicativo, proativo e flexível para mudanças e resolução de problemas, sou capaz de liderar equipes e desenvolver relacionamentos duradouros com clientes e fornecedores.
+                        </p>
+                    </div>
+
+                    <div class="container">
+                        <div class="containerIMAGEM">
+                            <div id="carouselExampleIndicators" class="carousel slide">
+                                <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="imagens/full.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="imagens/front.png" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="imagens/back.png" class="d-block w-100" alt="...">
+                                </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
         </section>
 
         <footer class="rodape">
-            <h1>Cristiano de Carvalho Parangaba</h1>
-            <div class="minha-imagem">
-                <div class="sobremim">
-                    <h3>Sobre mim</h3>
-                    <p>
-                        Sou um profissional com experiência em vendas e prospecção, liderança de equipe, gerenciamento de contas e atendimento ao cliente. 
-                    </p>
-                    <p>
-                        Possuo habilidades em React, Bootstrap, JavaScript, Git, GitHUb, NodeJS e MySQL, além de conhecimentos em Python e Power BI para automação, Web Scraping, análise de dados, tratamento de dados, gráficos em Python e tabelas (DataFrames).
-                    </p>
-                    <p>
-                        Busco constantemente aperfeiçoamento e atualização em novas tecnologias. Comunicativo, proativo e flexível para mudanças e resolução de problemas, sou capaz de liderar equipes e desenvolver relacionamentos duradouros com clientes e fornecedores.
-                    </p>
-                </div>
-                <div>
-                    <img src="imagens/fundopreto.png" width="400px" alt="">
-                </div>
-            </div>
+            <ul class="list-inline">
+                <li class="list-inline-item">This is a list item.</li>
+                <li class="list-inline-item">And another one.</li>
+                <li class="list-inline-item">But they're displayed inline.</li>
+            </ul>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
