--- a/index.html
+++ b/index.html
@@ -17,28 +17,31 @@
             </button>
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Portfólio</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#pagina-home">Inicio</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="https://beacons.ai/carvalhotkeys">Beacons</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://github.com/carvalhotkeys">gitHub</a>
                     </li>
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark">
-                        <li><a class="dropdown-item" href="#">Sobre</a></li>
+                        <li><a class="dropdown-item" href="#sobre-mim">Sobre</a></li>
                         <li><a class="dropdown-item" href="#projetos-id">Projetos</a></li>
                         <li>
                         <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Fale Comigo</a></li>
+                        <li><a class="dropdown-item" href="#fale-comigo">Fale Comigo</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -47,7 +50,7 @@
             </div>
         </nav>
 
-        <section>
+        <section id="pagina-home">
             <div>
                 <div>
                     <h1 class="projetos" id="projetos-id">Projetos</h1>
@@ -96,7 +99,7 @@
                 <h1 class="meunome">Cristiano Carvalho</h1>
                 <div class="containersobreEimage">
                     <div class="container">
-                        <h3 class="sobremim">Sobre mim</h3>
+                        <h3 class="sobremim" id="sobre-mim">Sobre mim</h3>
                         <p class="pSobremim">
                             Sou um profissional com experiência em vendas e prospecção, liderança de equipe, gerenciamento de contas e atendimento ao cliente. 
                         </p>
