--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                             Sou um profissional com experiência em vendas e prospecção, liderança de equipe, gerenciamento de contas e atendimento ao cliente. 
                         </p>
                         <p class="pSobremim">
-                            Possuo habilidades em HTML5, CSS3, React, Bootstrap, JavaScript, Git, GitHUb, NodeJS e MySQL, além de conhecimentos em Python e Power BI para automação, Web Scraping, análise de dados, tratamento de dados, gráficos em Python e tabelas (DataFrames).
+                            Possuo habilidades em HTML5, CSS3, React, Bootstrap, JavaScript, Git, GitHub, NodeJS e MySQL, além de conhecimentos em Python e Power BI para automação, Web Scraping, análise de dados, tratamento de dados, gráficos em Python e tabelas (DataFrames).
                         </p>
                         <p class="pSobremim">
                             Busco constantemente aperfeiçoamento e atualização em novas tecnologias. Comunicativo, proativo e flexível para mudanças e resolução de problemas, sou capaz de liderar equipes e desenvolver relacionamentos duradouros com clientes e fornecedores.
