--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Portfólio</a>
+            <a class="navbar-brand" href="#">Portfólioss</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
